--- a/src/Containers/Header/style.module.css
+++ b/src/Containers/Header/style.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@600&display=swap');
 
 .header {
-  background-color: #6d32a8;
+  background-color: #892cdc;
   padding: 1.2rem 0 0.2rem;
 }
 
